--- a/Product_Catalog/Views/Product/_CreateAndEditPartialView.cshtml
+++ b/Product_Catalog/Views/Product/_CreateAndEditPartialView.cshtml
@@ -1,17 +1,11 @@
 ﻿@model Product
 @{
-    ViewData["Title"] = "Create";
-    ViewBag.link = "Create";
-    //SelectList listIofCategories = new SelectList(ViewBag.Categories, "Id", "Name");
+    SelectList listIofCategories = new SelectList(ViewBag.Categories, "Id", "Name");
 }
-<h1>Create Product</h1>
-<hr />
-<partial name="_CreateAndEditPartialView" model="Model" />
-@*<div class="row">
+<div class="row">
     <div class="col-md-4">
-        <form asp-action="Create" asp-controller="Product" method="post" enctype="multipart/form-data">
-            @Html.AntiForgeryToken()
-            @*<div asp-validation-summary="All" class="text-danger"></div>
+        <form asp-action="@ViewBag.link" asp-controller="Product" method="post" enctype="multipart/form-data">
+            <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
@@ -41,16 +35,9 @@
                 <select asp-for="CategoryId" asp-items="listIofCategories"></select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="@ViewBag.link" class="btn btn-primary" />
             </div>
         </form>
     </div>
-</div>*@
-
-<div>
-    <a asp-action="Index" asp-controller="Product">Go To All Product</a>
 </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
