--- a/Product_Catalog/Views/Shared/Error.cshtml
+++ b/Product_Catalog/Views/Shared/Error.cshtml
@@ -5,14 +5,18 @@
 
 <h1 class="text-danger">Error.</h1>
 <h2 class="text-danger">An error occurred while processing your request.</h2>
+<p>
+    <strong>Request ErrorMessage:</strong> <code>@Model.ErrorMessage</code>
+</p>
 
 @if (Model.ShowRequestId)
 {
     <p>
         <strong>Request ID:</strong> <code>@Model.RequestId</code>
     </p>
+  
 }
-
+@*
 <h3>Development Mode</h3>
 <p>
     Swapping to <strong>Development</strong> environment will display more detailed information about the error that occurred.
@@ -22,4 +26,4 @@
     It can result in displaying sensitive information from exceptions to end users.
     For local debugging, enable the <strong>Development</strong> environment by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>
     and restarting the app.
-</p>
+</p>*@
