--- a/Product_Catalog/Views/Product/ShowProductsForUsers.cshtml
+++ b/Product_Catalog/Views/Product/ShowProductsForUsers.cshtml
@@ -12,6 +12,7 @@
         <tr>
             <th>Product Name</th>
             <th>Create Date</th>
+            <th>Start Date</th>
             <th>Duration Days </th>
             <th>Price</th>
             <th>Image</th>
@@ -24,6 +25,7 @@
             <tr>
                 <td>@item.Name</td>
                 <td>@item.CreationDate</td>
+                <td>@item.StartDate</td>
                 <td>@item.Duration</td>
                 <td>@item.Price</td>
                 <td>
