change in design and add data annotation on attributes

--- a/Product_Catalog/Views/Account/Login.cshtml
+++ b/Product_Catalog/Views/Account/Login.cshtml
@@ -9,8 +9,11 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Login">
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <input hidden name="ReturnUrl" value="@ViewBag.ReturnUrl" />
+            <div>
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <input hidden name="ReturnUrl" value="@ViewBag.ReturnUrl" />
+            </div>
+           
             <div class="form-group">
                 <label asp-for="UserName" class="control-label"></label>
                 <input asp-for="UserName" class="form-control" />
@@ -27,14 +30,17 @@
                 </label>
             </div>
             <div class="form-group">
-                <input type="submit" value="Sign in" class="btn btn-primary" />
+                <input type="submit" value="Sign in" class="btn btn-success" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <p>
+        If not have account
+        <a asp-action="Registration" class="btn btn-primary ">Register</a>
+    </p>
 </div>
 
 @section Scripts {
