--- a/Product_Catalog/Views/Product/Edit.cshtml
+++ b/Product_Catalog/Views/Product/Edit.cshtml
@@ -7,7 +7,9 @@
 <h1>Edit</h1>
 <partial name="_CreateAndEditPartialView" model="Model" />
 <div>
-    <a asp-action="Index" asp-controller="Product">Go To All Product</a>
+
+    <a asp-action="Index" asp-controller="Product" class="btn-secondary">Go To All Product</a>
+    <a asp-action="Details" asp-controller="Product" class="btn btn-secondary">Detais</a>
 </div>
 
 @section Scripts {
