--- a/Product_Catalog/Views/Account/Registration.cshtml
+++ b/Product_Catalog/Views/Account/Registration.cshtml
@@ -1,7 +1,6 @@
 ﻿@model RegisterUserVM
 @{
     ViewData["Title"] = "Registration";
-    //SelectList selectListItems = new SelectList(ViewBag.AllRoles, "", "RoleName");
 }
 
 <h1>Registration</h1>
@@ -37,15 +36,18 @@
                 <select asp-for="RoleName" asp-items="@ViewBag.AllRoles" class="form-control">
                 </select>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Register " class="btn btn-primary" />
+            <div class="form-group mt-1">
+                <input type="submit" value="Register " class="btn btn-success" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <p>
+        If already have account
+        <a asp-action="Login" class="btn btn-primary ">Login</a>
+    </p>
 </div>
 
 @section Scripts {
