--- a/Product_Catalog/Views/Product/ShowProductsForUsers.cshtml
+++ b/Product_Catalog/Views/Product/ShowProductsForUsers.cshtml
@@ -5,33 +5,18 @@
 }
 
 <h1>ShowProductsForUsers</h1>
-
-
-<table class="table table-active">
-    <thead>
-        <tr>
-            <th>Product Name</th>
-            <th>Create Date</th>
-            <th>Start Date</th>
-            <th>Duration Days </th>
-            <th>Price</th>
-            <th>Image</th>
-        
-        </tr>
-    </thead>
-    <tbody>
+<div class="container">
+    <div class="row">
         @foreach (var item in Model)
         {
-            <tr>
-                <td>@item.Name</td>
-                <td>@item.CreationDate</td>
-                <td>@item.StartDate</td>
-                <td>@item.Duration</td>
-                <td>@item.Price</td>
-                <td>
-                    <img src="/Images/@item.Image" width="100" height="100">
-                </td>
-            </tr>
+
+            <div class="card col-3 m-1 mt-5" style="width: 16rem;">
+                <img src="/Images/@item.Image" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">@item.Name</h5>
+                    <a class="btn btn-secondary" asp-action="Details" asp-route-id="@item.Id">Details</a>
+                </div>
+            </div>
         }
-    </tbody>
-</table>
+    </div>
+</div>
