--- a/Product_Catalog/Views/Role/AddRole.cshtml
+++ b/Product_Catalog/Views/Role/AddRole.cshtml
@@ -16,16 +16,14 @@
                 <input asp-for="RoleName" class="form-control" />
                 <span asp-validation-for="RoleName" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="AddRole" class="btn btn-primary" />
+            <div class="form-group mt-1">
+                <input type="submit" value="AddRole" class="btn btn-success" />
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
 
 @section Scripts {
     @{
