add filter by category and EDit on Image

--- a/Product_Catalog/Views/Home/Index.cshtml
+++ b/Product_Catalog/Views/Home/Index.cshtml
@@ -3,6 +3,8 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
+    <h1 class="display-4">Welcome Xceed</h1>
+    <h6 class="display-6">Please Login as Admin to see admin panel or login as user 
+        to see all product available in this time </h6>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
